# GoPilot

./: .gitignore  Cargo.toml  Makefile  README.md  index.html  madge-main-utf8.txt  madge-main.json  madge-orphans-utf8.txt  madge-orphans.json  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.js  unused-components-entry.txt  unused-components-madge.txt  unused-components.txt  vite.config.ts
docs/: AI编程编辑器-需求文档(PRD).md  ai-coding-assistant-roadmap.md  ai-configuration-guide.md  ai-panel-usage.md  ai-troubleshooting.md  phase-1-implementation-summary.md  quick-start.md  task-decomposition-implementation.md  technical-architecture.md
public/: loader.js.map  manifest.json
scripts/: build-macos.sh
src/: App.tsx  index.css  main.tsx
src-extension-host/: README.md  index.js  package-lock.json  package.json  tsconfig.json
src-extension-host/src/: extension-host.ts  index.ts  types.ts
src-tauri/: .env.example  .env.ollama  Cargo.toml  build.rs  debug-ai-chat.cjs  demo_task_decomposition.rs  force-reload-config.cjs  ollama_demo.rs  setup-ai.js  tauri.conf.json  test-ai-connection.cjs  test-config.cjs  test-conversation.cjs  test-ollama-chat.cjs
src-tauri/icons/: icon.icns
src-tauri/scripts/: fix-info-plist.cjs  fix-info-plist.sh
src-tauri/src/: ai.rs  config.rs  conversation.rs  db.rs  extension_host.rs  lib.rs  main.rs
src-tauri/src/task_decomposition/: analyzer.rs  classifier.rs  decomposer.rs  demo.rs  mod.rs  types.rs
src-tauri/tests/: ai_tests.rs
src/components/ai/: AIPanel.tsx  ConversationChat.tsx  ConversationList.tsx
src/components/database/: DatabasePanel.tsx
src/components/editor/: EditorWorkspace.tsx  MonacoEditor.tsx  TabsBar.tsx  monacoProject.ts
src/components/explorer/: ExplorerTree.tsx
src/components/extensions/: ExtensionsPanel.tsx
src/components/git/: GitPanel.tsx
src/components/layouts/: ActivityBar.tsx  ContextMenu.tsx  GlobalFooter.tsx  GlobalHeader.tsx  ResizableRightPanel.tsx  RightActivityBar.tsx  RightSidebar.tsx
src/components/search/: SearchPanel.tsx
src/components/terminal/: BottomPanel.tsx  TerminalModal.tsx  XtermTerminal.tsx
src/components/ui/: GitCommitGraph.tsx  Modal.tsx
src/components/viewers/: FileViewer.tsx  ImageEditorViewer.tsx  ImageViewer.tsx  MarkdownViewer.tsx  PdfEditorViewer.tsx  PdfViewer.tsx  VideoViewer.tsx  ViewerRegistry.tsx  defaultRenderers.tsx  types.ts
src/contexts/: ConversationContext.tsx
src/extensions/: extension-host.ts  installed.ts  node-runtime.ts  output-listener.ts  paths.ts  registry.ts  runtime.ts  store.ts  types.ts
src/extensions/builtin/: hello.tsx  index.ts
src/pages/: Home.tsx  Settings.tsx
src/styles/: theme.css
src/theme/: theme.ts
src/types/: conversation.ts
